@@ -1,3 +1,7 @@
+= HEAD
+
+* Add json_parser plugin, for parsing request bodies in JSON format (jeremyevans)
+
 = 2.2.0 (2015-04-13)
 
 * Add :escaper render plugin option to support custom escaping of <%= %> tags when :escape is used (jeremyevans)
